  * I18n of schooltool debconf templates with po-debconf.
  * Fixed bug where the ssl_certificate configuration option was not added
    to the configuration file if the certificate existed before installation.
  * Moved the persistent, zope, BTrees and ZDOB modules to /usr/lib and
    removed all links from /usr/share to /usr/lib.
  * Changed priority to extra.

 -- Brian Sutherland <jinty@web.de>  Wed, 13 Oct 2004 23:23:13 +0200

schooltool (0.7.2-1) unstable; urgency=low

  * Changed maintainer name.
  * Moved logic for cleaning debian directory into debian/rules.
  * Use dh_makeshlibs and dh_shlibdeps in rules.
  * Created libschooltool-server package for arch dep server files.
  * Added Zope Public License 2.0 and 2.1 to copyright files and merged
    them into one.
  * Use dh_installinit to install /etc/default/schooltool.
  * Use dh_installexamples to install example config file.
  * Added logrotation using logrotate script.
  * Moved installation of clients into /usr/share as it is architecture
    independent.
  * Attempt to remove logs and other files on purge (but NOT database).
  * Updated schooltool-client and import-sampleschool manpages.
  * Added suggests for python-tcpwrap as we support TCP wrappers natively now.
  * Rename schooltool-server packages to schooltool (Kept schooltool-server as
    a dummy package depending on schooltool).
  * Cleaned up debian/rules.
  * Updated docs.
  * Add pre-seedable debconf configuration for server ports and SSL
    certificates.

 -- Brian Sutherland <jinty@web.de>  Sat, 18 Sep 2004 13:05:48 +0200

schooltool (0.6+svn20040825-0.1) unstable; urgency=low

  * Not released.
  * debian/README.Debian: mention the new web frontend.
  * debian/schooltool.conf: added web 7080 and app-log-path.
  * debian/rules: added schooltool.css to the server package
  * debian/rules: added csvimport.py to the clients package (Gintas)

 -- Marius Gedminas <marius@pov.lt>  Wed, 25 Aug 2004 15:16:16 +0300
